# STREAM_GPT

./: .coverage  .gitignore  DL_IanGoodfellow.json  DeepLearningChunks OCR 200-210.json  DeepLearningChunks OCR.json  DeepLearningChunks.json  README.md  ideas.json  main.py  pyproject.toml  stream_gpt_repo.json
Knowledge-Tree/: pyproject.toml
Knowledge-Tree/knowledge_tree/: main.py  test_construct_tree.py
Knowledge-Tree/knowledge_tree/constants/: function_schemas.py  prompts.py
backend/kb-construction/: main.py
data/raw_library/: 1pdfminer_scraper.json  2pdfplumber_scraper.json  2pypdf2_scraper.json  4pytesseract_scraper.json
langchain_learning/: first.py
local-test-grounds/: ideas_layer222.json
local-test-grounds/kb-construction/: DeepLearningChunks OCR 8.json  global_vars.py  helpers.py  just_run_chat.py  main.py  official_global_vars.py  official_helpers.py  official_prompts.py  openai_helpers.py  print.py  prompts.py  temp.py  test_prompts1.txt  test_prompts2.txt
local-test-grounds/llama_index_/: gcs_handler.py  index_manager.py
stream_gpt/constants/: function_schemas.py  local_paths.py  prompts.py
stream_gpt/data_scrapers/: github_repo_scraper.py  global_scraper.py  pdf_scraper.py  pdf_scrapers.py  test.py  web_scraper.py
stream_gpt/interfaces/: scraper_interface.py
stream_gpt/knowledge_tree/: main.py
stream_gpt/types/: document.py
stream_gpt/utils/: helpers.py  inference.py
tests/: test_construct_tree.py  test_pdf_scraper.py  test_web_scraper.py
tests/data_scrapers/: test_github_repo_scraper.py  test_pdf_scraper.py  test_web_scraper.py
(+10 files in other folders)
