[tool.poetry]
name = "knowledge-tree"
version = "0.1.0"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
tiktoken = "^0.5.1"
graphviz = "^0.20.1"
pdfplumber = "^0.10.2"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
pypdf = "^3.16.4"
bs4 = "^0.0.1"
selenium = "^4.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
